# the-anchor

./: .gitignore  CLAUDE.md  LICENSE  README.md  biome.json  bunfig.toml  index.html  package.json  tsconfig.json  vite.config.ts
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  release.yml
.husky/: commit-msg  pre-commit
app/: App.tsx  main.tsx
app/theme/: recipes.ts  system.ts
service/: Cargo.toml  tauri.conf.json
service/icons/: icon.icns
service/src/: main.rs
